--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = {version="1.44", features=["macros", "full"]}
 tokio-macros = "2.3.0"
 serde = {version="*", features=["derive"]}
 sqlx = {version="*", features=["mysql", "runtime-tokio-native-tls"]}
+openssl = { version = "0.10.35", features = ["vendored"] }
