--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
 axum = "*"
 tokio = {version="1.44", features=["macros", "full"]}
 tokio-macros = "2.3.0"
